# grpc-hello

./: CMakeLists.txt  CMakeSettings.json  README.md
proto/: data.grpc.pb.cc  data.grpc.pb.h  data.pb.cc  data.pb.h
src/: client.cpp  client.h  server.cpp
